--- a/PyPush/web/templates/index.html
+++ b/PyPush/web/templates/index.html
@@ -1,36 +1,111 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 	<meta charset="UTF-8"> 
 	<title>PyPush</title>
 
 	<script src="{{ url_for('bower.static', filename='angular/angular.min.js') }}"></script>
 	<script src="{{ url_for('bower.static', filename='angular-resource/angular-resource.min.js') }}"></script>
+	<script src="{{ url_for('bower.static', filename='angular-bootstrap/ui-bootstrap.min.js') }}"></script>
+	<script src="{{ url_for('bower.static', filename='angular-bootstrap/ui-bootstrap-tpls.min.js') }}"></script>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap-theme.min.css') }}">
+
+	<link href="{{ url_for('bower.static', filename='angular-xeditable/dist/css/xeditable.css') }}" rel="stylesheet">
+	<script src="{{ url_for('bower.static', filename='angular-xeditable/dist/js/xeditable.js') }}"></script>
+	<link rel="stylesheet" href="{{ url_for('bower.static', filename='components-font-awesome/css/font-awesome.min.css') }}">
 
 	<script src="{{ url_for('static', filename='main.js') }}"></script>
+
+
 </head>
 <body>
- 	<h1>Hello World!</h1>
- 	{% raw %}
- 	
- 	<div ng-app="PyPushApp" ng-controller="PushList">
- 		<table border="1">
- 			<thead>
- 				<tr><td>Name</td><td>UUID</td><td>Status</td><td>Actions</td></tr>
- 			</thead>
- 			<tbody>
- 				<tr data-ng-repeat="rec in microbots">
- 					<td>{{ rec.name }}</td><td>{{ rec.uuid }}</td><td>{{ rec.status }}</td>
- 					<td>
- 						<div data-ng-repeat="action in rec.actions">
- 							<button type="button" ng-click="doAction(rec.uuid, action)">{{ action }}</button>
- 						</div>
- 					</td>
- 				</tr>
- 			</tbody>
- 		</table>
-	</div>
+	<div class="container">
+	 	<h1>Microbots Push</h1>
+	 	{% raw %}
+	 	
+	 	<div ng-app="PyPushApp" ng-controller="PushList">
 
-	{% endraw %}
+	 		<table class="table">
+	 			<colgroup>
+	 				<col span="1" width="4" /> <!-- Name -->
+	 				<col span="1" width="1" /> <!-- UUID -->
+	 				<col span="1" width="2" /> <!-- Battery -->
+	 				<col span="1" width="2" /> <!-- Calibration -->
+	 				<col span="2" width="2" /> <!-- Status & Buttons -->
+	 			</colgroup>
+	 			<thead>
+	 				<tr>
+	 					<td>Name</td><td>UUID</td>
+	 					<td>Battery</td><td>Calibration</td>
+	 					<td>Status</td>
+	 					<td>Actions</td>
+	 				</tr>
+	 			</thead>
+	 			<tbody>
+	 				<tr data-ng-repeat="(id, rec) in microbots track by id">
+	 					<td>
+	 						<div class="popover-wrapper">
+	 							<a href="#" editable-text="rec.name" onbeforesave="updateName(rec, $data)">
+		 							{{ rec.name }}
+		 						</a>
+	 						</div>
+	 					</td><td>{{ rec.uuid }}</td>
+	 					<td>
+	 						<uib-progressbar value="rec.battery" max="1" title="Battery Level">{{ ((rec.battery * 100) || 0) | number:0 }}%</uib-progressbar>
+	 					</td>
+	 					<td>
+	 						<div class="popover-wrapper">
+	 							<a href="#" editable-text="rec.calibration" onbeforesave="updateCalibration(rec, $data)" edit-disabled="!rec.calibration == null">
+	 								<uib-progressbar value="rec.calibration" max="1" title="Calibration">{{ ((rec.calibration * 100) || 0) | number:0 }}%</uib-progressbar>
+	 							</a>
+	 						</div>
+	 					</td>
+	 					<td>
+	 						<!-- Status -->
+	 						<div class="row">
+		 						<div ng-switch="rec.status" class="col-md-1">
+		 							<i ng-switch-when="connected" class="fa fa-refresh" aria-hidden="true" uib-tooltip="Connected"></i>
+		 							<i ng-switch-when="not_connected" class="fa fa-plug" aria-hidden="true" uib-tooltip="Disconnected"></i>
+		 							<i ng-switch-when="not_paired" class="fa fa-chain-broken" aria-hidden="true" uib-tooltip="Not Paired"></i>
+		 							<p ng-switch-default>
+		 								{{ rec.status }}
+		 							</p>
+		 						</div>
+	 						<div class="col-md-1">
+		 						<div ng-if="rec.error">
+		 							<i class="fa fa-exclamation-triangle" aria-hidden="true" uib-tooltip-html="<tt>{{ rec.error }}</tt>"></i>
+		 						</div>
+	 						</div>
+	 						
+		 						<div class="col-md-1">
+			 						<i uib-tooltip="Extended" ng-if="rec.retracted === false" class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			 						<i uib-tooltip="Retracted" ng-if="rec.retracted === true" class="fa fa-circle-o" aria-hidden="true"></i>
+		 						</div>
+	 						</div>
+	 					</td>
+	 					<td>
+	 						   <div class="btn-group" uib-dropdown ng-if="rec.actions.length > 0">
+							      <button id="split-button" type="button" class="btn btn-primary btn-sm" ng-click="doAction(rec.uuid, rec.actions[0])"> {{ rec.actions[0] }} </button>
+							      <button type="button" class="btn btn-primary btn-sm" uib-dropdown-toggle>
+							        <span class="caret"></span>
+							        <span class="sr-only">Split button!</span>
+							      </button>
+							      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="split-button">
+							        <li role="menuitem" data-ng-repeat="action in rec.actions">
+							        	<a href="#" ng-click="doAction(rec.uuid, action)">{{ action }}</a>
+							        </li>
+							      </ul>
+							    </div>
+	 					</td>
+	 				</tr>
+	 			</tbody>
+	 		</table>
+
+
+		</div>
+
+		{% endraw %}
+	</div>
 </body>
 </html>
