--- a/PyPush/web/templates/index.html
+++ b/PyPush/web/templates/index.html
@@ -56,7 +56,7 @@
 	 					</td>
 	 					<td>
 	 						<div class="popover-wrapper">
-	 							<a href="#" editable-text="rec.calibration" onbeforesave="updateCalibration(rec, $data)" edit-disabled="!rec.calibration == null">
+	 							<a href="#" editable-text="rec.calibration" onbeforesave="updateCalibration(rec, $data)" edit-disabled="(rec.calibration == null) || (rec.actions.indexOf('calibrate') < 0)">
 	 								<uib-progressbar value="rec.calibration" max="1" title="Calibration">{{ ((rec.calibration * 100) || 0) | number:0 }}%</uib-progressbar>
 	 							</a>
 	 						</div>
@@ -92,7 +92,7 @@
 							        <span class="sr-only">Split button!</span>
 							      </button>
 							      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="split-button">
-							        <li role="menuitem" data-ng-repeat="action in rec.actions">
+							        <li role="menuitem" data-ng-repeat="action in rec.actions" ng-if="action != 'calibrate'">
 							        	<a href="#" ng-click="doAction(rec.uuid, action)">{{ action }}</a>
 							        </li>
 							      </ul>
