--- a/PyPush/web/templates/index.html
+++ b/PyPush/web/templates/index.html
@@ -99,6 +99,11 @@
 							<div class="col-md-11"><input type="text" class="form-control"  value="{{ actionUrl(rec, action) }}" /></div>
 							<div class="col-md-1"><button type="button" class="btn btn-default"  ng-click="doAction(rec.uuid, action)" width="100%">{{action}}</button></dir>
 						</div>
+						<div class="row" ng-if="row.error" >
+							<blockquote class="col-md-12"><tt>
+								{{ row.error }}
+							</tt></blockquote>
+						</div>
 					</div>
 				</div>
 		 	</div>
