--- a/PyPush/web/templates/index.html
+++ b/PyPush/web/templates/index.html
@@ -101,9 +101,9 @@
 						</div>
 
 						<div class="row" ng-show="rec.error" >
-							<blockquote class="col-md-12"><tt>
+							<blockquote class="col-md-12"><pre>
 								{{ rec.error }}
-							</tt></blockquote>
+							</pre></blockquote>
 						</div>
 					</div>
 				</div>
