--- a/PyPush/web/templates/index.html
+++ b/PyPush/web/templates/index.html
@@ -96,6 +96,34 @@
 		 	<div class="row" ng-repeat-end>
 		 		<div uib-collapse="collapseStatus" ng-init="0" >
 					<div class="well well-lg">
+						<!-- collapsable microbot details bit --> 
+						<div class="row">
+							<div class="col-md-4">
+								<table class="table">
+									<tbody>
+										<tr>
+											<th>Firmware Version</th>
+											<td>{{ rec.firmware_version }}</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<div class="col-md-2">
+
+
+	<div class="btn-group" uib-dropdown is-open="status.isopen">
+		<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled" ng-show="rec.actions.indexOf('change_button_mode') >= 0">
+		Button mode: {{ rec.button_mode }}<span class="caret"></span>
+		</button>
+		<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+			<li role="menuitem"><a href="#" ng-click="setButtonMode(rec.id, 'default')">Default</a></li>
+			<li role="menuitem"><a href="#" ng-click="setButtonMode(rec.id, 'inverted')">Inverted</a></li>
+		</ul>
+	</div>
+
+
+							</div>
+						</div>
 						<!-- Press/extend/release url endpoints -->
 						<div class="row" ng-repeat="action in publicEndpointActions(rec.actions)">
 							<div class="col-md-11"><input type="text" class="form-control"  value="{{ actionUrl(rec, action) }}" /></div>
